--- a/libproj/libproj.vcxproj
+++ b/libproj/libproj.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="Lab1PartB.cpp" />
     <ClCompile Include="Lab1PartC.cpp" />
     <ClCompile Include="Lab2.cpp" />
+    <ClCompile Include="Lab3.cpp" />
     <ClCompile Include="library.cpp" />
     <ClCompile Include="Lab1PartA.cpp" />
     <ClCompile Include="Tester.cpp" />
