--- a/libproj/libproj.vcxproj
+++ b/libproj/libproj.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="Lab3.cpp" />
     <ClCompile Include="Lab4.cpp" />
     <ClCompile Include="Lab5.cpp" />
+    <ClCompile Include="Lab6.cpp" />
     <ClCompile Include="library.cpp" />
     <ClCompile Include="Lab1PartA.cpp" />
     <ClCompile Include="Tester.cpp" />
