--- a/libproj/libproj.vcxproj
+++ b/libproj/libproj.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="Lab5.cpp" />
     <ClCompile Include="Lab6.cpp" />
     <ClCompile Include="Lab8.cpp" />
+    <ClCompile Include="Lab9.cpp" />
     <ClCompile Include="library.cpp" />
     <ClCompile Include="Lab1PartA.cpp" />
     <ClCompile Include="Tester.cpp" />
